# akarsu

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.MD  LICENSE.txt  README.md  pyproject.toml  tox.ini
.github/workflows/: pre-commit.yaml  test.yaml  test.yml
src/akarsu/: __main__.py  akarsu.py
tests/: test_akarsu.py
