[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "akarsu"
version = "0.2.0"
description = "New Generation Profiler based on PEP 669"
readme = "README.md"
keywords = [
  "PEP669",
  "profiler",
]
license = {file = "LICENSE.txt"}
authors = [
  { name = "Furkan Onder", email = "furkanonder@protonmail.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.urls]
"Bug Reports" = "https://github.com/furkanonder/akarsu/issues"
"Homepage" = "https://github.com/furkanonder/akarsu"
"Source" = "https://github.com/furkanonder/akarsu"
[project.scripts]
akarsu = "akarsu.__main__:main"

[tool.black]
target-version = ["py312"]
preview = true

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade,
  "I",   # isort
]
mccabe = { max-complexity = 14 }
target-version = "py312"

[tool.ruff.per-file-ignores]
'src/akarsu/akarsu.py' = ["E722"]

[tool.docformatter]
recursive = true
wrap-summaries = 79
wrap-descriptions = 79
blank = true

[tool.mypy]
warn_unused_configs = true
no_strict_optional = true
ignore_missing_imports = true
show_error_codes = true
